--- a/preprocessing/csv_for_data.ipynb
+++ b/preprocessing/csv_for_data.ipynb
@@ -11,14 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le fichier /Users/maurice/Documents/certification/dermdetect/csv/ben.csv a été créé avec succès !\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/maurice/Documents/data_nogit/Dermdetect/BEN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Récupérer les noms des fichiers image\u001b[39;00m\n\u001b[1;32m      9\u001b[0m extensions_images \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 10\u001b[0m noms_images \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(dossier_images) \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mendswith(extensions_images)]\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Créer un DataFrame\u001b[39;00m\n\u001b[1;32m     13\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(noms_images, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage_id\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/maurice/Documents/data_nogit/Dermdetect/BEN'"
      ]
     }
    ],
@@ -36,7 +40,7 @@
     "\n",
     "# Créer un DataFrame\n",
     "df = pd.DataFrame(noms_images, columns=['image_id'])\n",
-    "df['target'] = 0\n",
+    "df['target'] = 'benign'\n",
     "\n",
     "# Sauvegarder en CSV\n",
     "df.to_csv(fichier_csv, index=False)\n",
@@ -78,7 +82,7 @@
     "\n",
     "# Créer un DataFrame\n",
     "df = pd.DataFrame(noms_images, columns=['image_id'])\n",
-    "df['target'] = 1\n",
+    "df['target'] = 'malignant'\n",
     "\n",
     "# Sauvegarder en CSV\n",
     "df.to_csv(fichier_csv, index=False)\n",
@@ -112,6 +116,55 @@
     "df_final = pd.concat([df_ben, df_mal], ignore_index=True)\n",
     "\n",
     "df_final.to_csv(csv_final, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remplacer 0/1 par benign et malignant pour flow_from / class_mode = 'binary'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             image_id  target\n",
+      "0  ISIC_1064919_0.JPG  benign\n",
+      "1  ISIC_2708737_0.JPG  benign\n",
+      "2  ISIC_1944865_0.JPG  benign\n",
+      "3  ISIC_0032083_0.JPG  benign\n",
+      "4  ISIC_0028959_0.JPG  benign\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Exemple de DataFrame\n",
+    "df_final = pd.read_csv(\"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\")\n",
+    "\n",
+    "# Remplacement des valeurs 0 -> 'benign' et 1 -> 'malignant'\n",
+    "df_final[\"target\"] = df_final[\"target\"].replace({0: \"benign\", 1: \"malignant\"})\n",
+    "\n",
+    "# Vérification des changements\n",
+    "print(df_final.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_path = \"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\"\n",
+    "\n",
+    "df_final.to_csv(export_path, index=False, encoding='utf-8')\n"
    ]
   },
   {
