chore: Update README and add environment variables for directory paths
- Updated README with new information
- Added environment variables for directory paths
- Included instructions on how to set environment variables

--- a/preprocessing/csv_for_data.ipynb
+++ b/preprocessing/csv_for_data.ipynb
@@ -4,9 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Création du csv\n",
+    "# Création du csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "## CSV ben :\n"
+    "load_dotenv(dotenv_path='.env')\n",
+    "            \n",
+    "csv_path = os.getenv('CSV_PATH')\n",
+    "image_dir = os.getenv('IMAGE_DIR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CSV ben :"
    ]
   },
   {
@@ -27,12 +48,9 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
     "# Chemin vers ton dossier contenant les images\n",
-    "dossier_images = \"/Users/maurice/Documents/data_nogit/Dermdetect/BEN\"\n",
-    "fichier_csv = \"/Users/maurice/Documents/certification/dermdetect/csv/ben.csv\"\n",
+    "dossier_images = image_dir + \"/BEN\"\n",
+    "fichier_csv = csv_path + \"/ben.csv\"\n",
     "\n",
     "# Récupérer les noms des fichiers image\n",
     "extensions_images = ('.jpg')\n",
@@ -69,12 +87,8 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Chemin vers ton dossier contenant les images\n",
-    "dossier_images = \"/Users/maurice/Documents/data_nogit/Dermdetect/MAL\"\n",
-    "fichier_csv = \"/Users/maurice/Documents/certification/dermdetect/csv/mal.csv\"\n",
+    "dossier_images = image_dir + \"/MAL\"\n",
+    "fichier_csv = csv_path + \"/mal.csv\"\n",
     "\n",
     "# Récupérer les noms des fichiers image\n",
     "extensions_images = ('.jpg')\n",
@@ -104,11 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "ben = \"/Users/maurice/Documents/certification/dermdetect/csv/ben.csv\"\n",
-    "mal = \"/Users/maurice/Documents/certification/dermdetect/csv/mal.csv\"\n",
-    "csv_final = \"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\"\n",
+    "ben = csv_path + \"/ben.csv\"\n",
+    "mal = csv_path + \"/mal.csv\"\n",
+    "csv_final = csv_path + \"/dataset.csv\"\n",
     "\n",
     "# Charger les fichiers CSV en DataFrame\n",
     "df_ben = pd.read_csv(ben)\n",
@@ -144,10 +156,8 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Exemple de DataFrame\n",
-    "df_final = pd.read_csv(\"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\")\n",
+    "df_final = pd.read_csv(csv_final)\n",
     "\n",
     "# Remplacement des valeurs 0 -> 'benign' et 1 -> 'malignant'\n",
     "df_final[\"target\"] = df_final[\"target\"].replace({0: \"benign\", 1: \"malignant\"})\n",
@@ -162,17 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_path = \"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\"\n",
-    "\n",
-    "df_final.to_csv(export_path, index=False, encoding='utf-8')\n"
+    "df_final.to_csv(csv_final, index=False, encoding='utf-8')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
