--- a/preprocessing/csv_for_data.ipynb
+++ b/preprocessing/csv_for_data.ipynb
@@ -174,6 +174,53 @@
    "source": [
     "df_final.to_csv(csv_final, index=False, encoding='utf-8')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre total d'images disponibles après correspondance : 72600\n",
+      "Le fichier CSV nettoyé a été sauvegardé dans : /Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Définition des chemins\n",
+    "csv_path = \"/Users/maurice/Documents/certification/dermdetect/csv/dataset.csv\"\n",
+    "image_dir = \"/Users/maurice/Documents/data_nogit/Dermdetect/ALL\"\n",
+    "\n",
+    "# Charger le fichier CSV\n",
+    "df = pd.read_csv(csv_path)\n",
+    "\n",
+    "# Normalisation des noms d'images (suppression des espaces et conversion en minuscules)\n",
+    "df['image_id'] = df['image_id'].str.strip().str.lower()\n",
+    "\n",
+    "# Vérification des fichiers disponibles dans le dossier\n",
+    "files_in_directory = [f.lower() for f in os.listdir(image_dir)]\n",
+    "\n",
+    "# Ajouter le chemin complet des fichiers images\n",
+    "df['image_path'] = df['image_id'].apply(lambda x: os.path.join(image_dir, x))\n",
+    "\n",
+    "# Filtrer les fichiers existants dans le dossier\n",
+    "df_cleaned = df[df['image_path'].apply(lambda x: os.path.basename(x) in files_in_directory)]\n",
+    "\n",
+    "# Vérification du nombre d'images disponibles\n",
+    "print(f\"Nombre total d'images disponibles après correspondance : {len(df_cleaned)}\")\n",
+    "\n",
+    "# Sauvegarder le nouveau DataFrame dans un fichier CSV\n",
+    "output_csv_path = csv_path  # Écraser le fichier original\n",
+    "df_cleaned.to_csv(output_csv_path, index=False)\n",
+    "\n",
+    "print(f\"Le fichier CSV nettoyé a été sauvegardé dans : {output_csv_path}\")\n"
+   ]
   }
  ],
  "metadata": {
